--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
 	</properties>
 	<dependencies>
 		<!--JPA-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
